src/objects/Account/fields/customer_demo_may11__c.field-meta.xml
<CustomField>
    <fullName>customer_demo_may11__c</fullName>
    <label>customer_demo_may11</label>
    <length>25</length>
    <type>Text</type>
</CustomField>