src/objects/Account/fields/customer_intuitive_surgical__c.field-meta.xml
<CustomField>
    <fullName>customer_intuitive_surgical__c</fullName>
    <label>customer_intuitive_surgical</label>
    <length>25</length>
    <type>Text</type>
</CustomField>