src/objects/Account/fields/demo_discussion__c.field-meta.xml
<CustomField>
    <fullName>demo_discussion__c</fullName>
    <label>demo_discussion</label>
    <length>25</length>
    <type>Text</type>
</CustomField>