src/objects/Account/fields/demo_field_may10__c.field-meta.xml
<CustomField>
    <fullName>demo_field_may10__c</fullName>
    <label>demo_field_may10</label>
    <length>25</length>
    <type>Text</type>
</CustomField>