src/objects/Account/fields/demo_field_may9__c.field-meta.xml
<CustomField>
    <fullName>demo_field_may9__c</fullName>
    <label>demo_field_may9</label>
    <length>25</length>
    <type>Text</type>
</CustomField>