src/objects/Account/fields/opsera_demo__c.field-meta.xml
<CustomField>
    <fullName>opsera_demo__c</fullName>
    <label>opsera_demo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>